Correct too light of hue on text color.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  color: #615d59;
+  color: #383633;
 }
 
 header {
